fix: changes add-course icon, not finished it doesn't display properly on smaller screens

--- a/src/Pages/Admin/ManageCourse.css
+++ b/src/Pages/Admin/ManageCourse.css
@@ -6,8 +6,8 @@
 }
 
 .manage-course-content {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 	flex: 1;
 }
 
@@ -23,35 +23,36 @@
 	text-align: center;
 }
 
-.add-course-icon {
-	position: absolute;
-	top: 20px;
-	right: 20px;
-	cursor: pointer;
+.manage-course-icon-plus {
+	font-size: 2em;
+    border-radius: 50%;
+    padding: 10px;
+    color: black;
+	margin-left: 10rem;
 }
 
 .manage-courses-grid {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  overflow-y: auto;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 20px;
+	overflow-y: auto;
 }
 
 .manage-course-card {
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  padding: 15px;
-  margin: 10px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  flex: 1 1 200px; /* Ensures all cards have the same size */
-  max-width: 200px; /* Ensures all cards have the same size */
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	text-align: center;
+	padding: 15px;
+	margin: 10px;
+	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	flex: 1 1 200px; /* Ensures all cards have the same size */
+	max-width: 200px; /* Ensures all cards have the same size */
 }
 
 .manage-course-card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+	transform: scale(1.05);
+	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .manage-course-image {
